add swagger getBoard descr
